--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
-body {
-    background: firebrick
-}
+@import "variables.css";
+@import "body.css";
+@import "navbar.css";
+@import "header.css";
+@import "about.css";
+@import "project.css";
+@import "contacts.css";
+@import "footer.css";
+@import "homemain.css";
