--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,7 +1,10 @@
 .navbar{
     background: black;
-    size: cover;
+    color: darkslategray;
+    text-align: left;
 }
-h3{
-    color: darkslategrey;
-}
+
+
+
+
+
