--- a/css/body.css
+++ b/css/body.css
@@ -1,3 +1,51 @@
 body {
     background: url('https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60')
 }
+
+h3{
+    color: darkslategrey;
+    font-size: 24pt;
+}
+
+h4{
+    color: darkslategray;
+    font-size: 16pt;
+}
+
+a:link{
+    color: darkslategray;
+    text-decoration: darkslategray
+}
+
+a:visited{
+    color: darkslategray;
+    text-decoration: darkslategray
+}
+
+a:active{
+    color: lightgray;
+    text-decoration: lightgray
+}
+
+a:hover{
+    color: darkgray;
+    text-decoration: darkgray
+}
+
+
+ul{
+    list-style-type: none;
+}
+
+li{
+    float: left;
+    margin-right: 20px;
+}
+
+table{
+    background-color: rgba(80, 77, 77, 0.9)
+}
+
+tr{
+    float: left;
+}
