--- a/css/contact.css
+++ b/css/contact.css
@@ -1,12 +1,6 @@
-.contactHead {
-    float: left;
-    width: 300px;
-    color: Darkgrey;
-    border: 3px solid black;
-    padding: 10px;
-    position: relative;
-}
-
-.clearfix {
-    overflow: auto;
+.contactmain {
+    background-color: rgba(128, 128, 128, .9);
+    margin: 5px, 5px, 5px, 5px;
+    padding: 4px, 4px, 4px, 4px;
+    background-size: cover;
 }
